# autonet_r1

./: .bashrc  .gitignore  .pylintrc  CMakeLists.txt  README.md  graph_fest.py  map_1.json  package.xml  servo.txt  setup.py
arduino_api/: README.md
digitRecognition/: OCR.py
graber/: README.md  servo.py
lane_detector/: README.md
launch/: arduino.launch  camera1.launch  joy.launch  lane_reg.launch  laptop.launch  motors.launch  nav.launch  nav_motors.launch  nav_sim.launch  r1.launch  viz.launch
maps/: README.md  graph_connections.py  graph_coords.py  map_1.json  map_coordinates.json  map_coordinates_1.json
motors/: Motor.py  Odometry_calc.py  README.md  motor_ros.py
msg/: Addres.msg  LaneRes.msg  PathNamed2.msg  PathNamed3.msg
nav/: README.md
python_api/: Motor.py  README.md  test_enc_motor.py
scripts/: do_line.py  do_way_line.py  line_params.json
src/coordinate/: coordinate.py
src/digitRecognition/: OCR.py  README.md  colorRecLib.py  colorRecognition.py  ocr_ros.py  rec.py  shapeDetector.py  test.data  test.py  training.data
src/digitRecognition/color_recognition_api/: color_histogram_feature_extraction.py  knn_classifier.py
src/graber/: README.md  servo.py
src/joystick/: README.md  Remote_Contorol.py  bag.py  config.json  joystick.py
src/lane_detector/: README.md  lane_not_ros.py  lane_ros.py  reg_line1.py  reg_line1_oneL.py
src/main/: do_line.py  do_way_line.py  line_params.json
src/maps/: README.md  calc_real_distance.py  graph.py  graph_connections.py  graph_coords.py  map_1.json  map_coordinates_1.json  map_coordinates_full_1.json  map_full_1.json  viz.py  viz_ros.py
src/motors/: MedianArray.py  Motor.py  Odometry_calc.py  PID.py  README.md  config.json  motor2_ros.py  motor_ros.py
src/nav/: README.md  coor_conv.py  do_line.py  do_way.py  forward.py  get_path.py  nav.py  nav_config.json  navigate.py  navigate_config.json  navigate_config_sim.json  print_get_tem.py  test.data
src/tools/: calc_trajectory.py  test.py  tf_tools.py
srv/: Forward.srv  GetGrabPath.srv  GetPath.srv  GetTelemetry.srv  Navigate.srv  SetNav.srv  SetOdom.srv
test/: Motor.py  test_enc_motor.py  test_servo.py
